--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -28,10 +32,10 @@
     <div class="container">
       <div class="d-flex justify-content-end mb-3">
         <button id="theme-switcher" class="btn btn-outline-primary">
-          Toggle Theme
+          <i id="theme-icon" class="fas fa-moon"></i>
         </button>
       </div>
-      <h2>Developer 30 Days Challenge</h2>
+      <h2>Developer's 30 Days Challenge</h2>
       <div class="row"></div>
     </div>
 
