--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
       />
     </div>
 
+    <button class="theme-toggle-btn" id="theme-toggle-btn">🌙</button>
+
     <div class="container">
-      <div class="d-flex justify-content-end mb-3">
-        <button id="theme-switcher" class="btn btn-outline-primary">
-          <i id="theme-icon" class="fas fa-moon"></i>
-        </button>
-      </div>
+      <!-- <div class="d-flex justify-content-end mb-3"> -->
+        <!-- <button id="theme-switcher" class="btn btn-outline-primary"> -->
+        <!--   <i id="theme-icon" class="fas fa-moon"></i> -->
+        <!-- </button> -->
+      <!-- </div> -->
       <h2>Developer's 30 Days Challenge</h2>
       <div class="row"></div>
     </div>
